
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;
typedef int ret ;


 int memset (char*,int ,int) ;
 int sprintf (char*,char*,int,int,int,int,int,int) ;

char *macaddr_to_str(u_char *mac){
 static char ret[18];
 memset(ret,0,sizeof(ret));
 sprintf(ret,"%02x:%02x:%02x:%02x:%02x:%02x",mac[0],mac[1],mac[2],mac[3],mac[4],mac[5]);
 return ret;

}
